--- a/src/main/resources/fxml/interpolation_tab.fxml
+++ b/src/main/resources/fxml/interpolation_tab.fxml
@@ -22,25 +22,22 @@
             <items>
                 <VBox prefHeight="200.0" prefWidth="100.0">
                     <children>
-                        <Label text="Вид статистического анализа" textOverrun="CLIP" translateX="15.0" translateY="11.0">
+                        <Label text="Интерполяция" textOverrun="CLIP" translateX="22.0" translateY="15.0">
                             <font>
-                                <Font name="System Bold" size="12.0" />
+                                <Font name="System Bold" size="14.0" />
                             </font></Label>
-                        <ComboBox prefWidth="170.0" promptText="Интерполяция" translateX="20.0" translateY="20.0" />
                         <Group>
                             <children>
-                                <Label layoutX="10.0" layoutY="10.0" text="Парам №1" textOverrun="CLIP" translateY="15.0" />
-                                <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#871fff00" height="120.0" stroke="BLACK" strokeType="OUTSIDE" width="170.0" />
-                                <Label layoutX="10.0" layoutY="10.0" text="Парам №2" textOverrun="CLIP" translateY="45.0" />
-                                <Label layoutX="10.0" layoutY="10.0" text="Парам №3" textOverrun="CLIP" translateY="75.0" />
-                                <TextField prefWidth="40.0" translateX="100.0" translateY="21.0" />
-                                <TextField prefWidth="40.0" translateX="100.0" translateY="51.0" />
+                                <Label layoutX="10.0" layoutY="10.0" text="Точность :" textOverrun="CLIP" translateY="15.0" />
+                                <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#871fff00" height="97.0" stroke="BLACK" strokeType="OUTSIDE" width="170.0" />
+                                <Label layoutX="10.0" layoutY="10.0" text="Значение X :" textOverrun="CLIP" translateY="45.0" />
+                                <TextField prefWidth="50.0" translateX="100.0" translateY="21.0" />
+                                <TextField prefWidth="50.0" translateX="100.0" translateY="51.0" />
                                 <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="20.0" layoutY="-6.0" stroke="BLACK" strokeType="OUTSIDE" translateX="11.0" translateY="-4.0" width="132.0" />
                                 <Label text="Параметры расчета" textOverrun="CLIP" translateX="20.0" translateY="-10.0">
                                     <font>
                                         <Font name="System Bold" size="12.0" />
                                     </font></Label>
-                                <TextField prefWidth="40.0" translateX="100.0" translateY="81.0" />
                             </children>
                             <VBox.margin>
                                 <Insets left="15.0" top="30.0" />
@@ -51,7 +48,7 @@
                                 <Font name="System Bold" size="12.0" />
                             </font>
                             <VBox.margin>
-                                <Insets left="15.0" top="10.0" />
+                                <Insets left="15.0" top="10.0" bottom="7" />
                             </VBox.margin>
                         </CheckBox>
                         <BorderPane prefHeight="288.0" prefWidth="397.0">
@@ -75,8 +72,8 @@
                             <bottom>
                                 <Group BorderPane.alignment="CENTER_RIGHT">
                                     <children>
-                                        <Button mnemonicParsing="false" text="Рассчитать" />
-                                        <Button mnemonicParsing="false" text="Сохранить" translateY="30.0" />
+                                        <Button prefWidth="80.0" mnemonicParsing="false" text="Рассчитать" />
+                                        <Button prefWidth="80.0" mnemonicParsing="false" text="Сохранить" translateY="30.0" />
                                     </children>
                                     <BorderPane.margin>
                                         <Insets bottom="10.0" right="10.0" />
