--- a/src/main/resources/fxml/interpolation_tab.fxml
+++ b/src/main/resources/fxml/interpolation_tab.fxml
@@ -28,11 +28,11 @@
                             </font></Label>
                         <Group>
                             <children>
-                                <Label layoutX="10.0" layoutY="10.0" text="Точность :" textOverrun="CLIP" translateY="15.0" />
+                                <!--<Label layoutX="10.0" layoutY="10.0" text="Точность :" textOverrun="CLIP" translateY="15.0" />-->
                                 <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#871fff00" height="97.0" stroke="BLACK" strokeType="OUTSIDE" width="240.0" />
-                                <Label layoutX="10.0" layoutY="10.0" text="Значение X :" textOverrun="CLIP" translateY="45.0" />
-                                <TextField prefWidth="120.0" translateX="100.0" translateY="21.0" />
-                                <TextField fx:id="xField" prefWidth="120.0" translateX="100.0" translateY="51.0" />
+                                <Label layoutX="10.0" layoutY="10.0" text="Значение X :" textOverrun="CLIP" translateY="30.0" />
+                                <!--<TextField prefWidth="120.0" translateX="100.0" translateY="21.0" />-->
+                                <TextField fx:id="xField" prefWidth="120.0" translateX="100.0" translateY="36.0" />
                                 <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="20.0" layoutY="-6.0" stroke="BLACK" strokeType="OUTSIDE" translateX="11.0" translateY="-4.0" width="132.0" />
                                 <Label text="Параметры расчета" textOverrun="CLIP" translateX="20.0" translateY="-10.0">
                                     <font>
