create project window now called

--- a/src/main/resources/fxml/main_window.fxml
+++ b/src/main/resources/fxml/main_window.fxml
@@ -20,7 +20,7 @@
         <menus>
           <Menu mnemonicParsing="false" text="Файл">
             <items>
-              <MenuItem mnemonicParsing="false" text="Создать проект" />
+              <MenuItem fx:id="createProject" mnemonicParsing="false" text="Создать проект" />
                   <MenuItem mnemonicParsing="false" text="Загрузить проект" />
                   <MenuItem mnemonicParsing="false" text="Сохранить проект" />
             </items>
