--- a/src/main/resources/fxml/main_window.fxml
+++ b/src/main/resources/fxml/main_window.fxml
@@ -21,7 +21,7 @@
           <Menu mnemonicParsing="false" text="Файл">
             <items>
               <MenuItem fx:id="createProject" mnemonicParsing="false" text="Создать проект" />
-                  <MenuItem mnemonicParsing="false" text="Загрузить проект" />
+                  <MenuItem fx:id="loadProject" mnemonicParsing="false" text="Загрузить проект" />
                   <MenuItem mnemonicParsing="false" text="Сохранить проект" />
             </items>
           </Menu>
@@ -41,10 +41,10 @@
         <tabs>
             <Tab text="Выборка № 1" fx:id="sampleTab">
                 <content>
-                    <TabPane prefHeight="371.0" prefWidth="600.0">
+                    <TabPane fx:id="calcTabPane" prefHeight="371.0" prefWidth="600.0">
                         <tabs>
                             <fx:include fx:id="interpolation" source="/fxml/interpolation_tab.fxml" />
-                            <Tab closable="false" text="+">
+                            <Tab closable="false" text="+" fx:id="newCalc">
                                 <content>
                                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
                                 </content>
