--- a/src/main/resources/fxml/main_window.fxml
+++ b/src/main/resources/fxml/main_window.fxml
@@ -37,23 +37,9 @@
       </MenuBar>
    </top>
    <center>
-      <TabPane prefHeight="366.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+      <TabPane fx:id="samplesTab" prefHeight="366.0" prefWidth="600.0" BorderPane.alignment="CENTER">
         <tabs>
-            <Tab text="Выборка № 1" fx:id="sampleTab">
-                <content>
-                    <TabPane prefHeight="371.0" prefWidth="600.0">
-                        <tabs>
-                            <fx:include fx:id="interpolation" source="/fxml/interpolation_tab.fxml" />
-                            <Tab closable="false" text="+">
-                                <content>
-                                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                                </content>
-                            </Tab>
-                        </tabs>
-                    </TabPane>
-                </content>
-            </Tab>
-            <Tab closable="false" text="+">
+            <Tab closable="false" text="+" fx:id="addSample">
                 <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
                 </content>
