сохранение проекта в базу и загрузка из базы

--- a/src/main/resources/fxml/create_project_dialog.fxml
+++ b/src/main/resources/fxml/create_project_dialog.fxml
@@ -23,6 +23,6 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <TextField layoutX="28.0" layoutY="131.0" prefHeight="25.0" prefWidth="188.0" />
+      <TextField fx:id="projectName" layoutX="28.0" layoutY="131.0" prefHeight="25.0" prefWidth="188.0" />
     </children>
 </AnchorPane>
