--- a/src/main/resources/fxml/dispersion_tab.fxml
+++ b/src/main/resources/fxml/dispersion_tab.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.*?>
 <?import org.gillius.jfxutils.chart.*?>
 
-<Tab fx:id="dispersionTab" text="Дисперсия" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.statsystem.controller.DispersionController">
+<Tab fx:id="varianceTab" text="Дисперсия" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.statsystem.controller.DispersionController">
     <content>
         <SplitPane fx:id="dispersionSplitPane" dividerPositions="0.5" nodeOrientation="LEFT_TO_RIGHT" prefHeight="200.0" prefWidth="200.0">
             <items>
