--- a/src/main/resources/fxml/correlation_tab.fxml
+++ b/src/main/resources/fxml/correlation_tab.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.*?>
 <?import org.gillius.jfxutils.chart.*?>
 
-<Tab fx:id="dispersionTab" text="Автокорреляционная функция" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.statsystem.controller.CorrelationController">
+<Tab fx:id="correlTab" text="Автокорреляционная функция" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.statsystem.controller.CorrelationController">
     <content>
         <SplitPane fx:id="correlationSplitPane" dividerPositions="0.5" nodeOrientation="LEFT_TO_RIGHT" prefHeight="200.0" prefWidth="200.0">
             <items>
@@ -65,7 +65,7 @@
                     </opaqueInsets>
                 </VBox>
                 <StackPane>
-                    <LineChart fx:id="expectedValueLineChart">
+                    <LineChart fx:id="correlationLineChart">
                         <xAxis>
                             <StableTicksAxis fx:id="correlationXAxis" animated="true" side="BOTTOM" />
                         </xAxis>
