--- a/src/main/resources/fxml/samples_tabs.fxml
+++ b/src/main/resources/fxml/samples_tabs.fxml
@@ -1,24 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.input.*?>
-<?import javafx.scene.paint.*?>
-<?import javafx.embed.swing.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.chart.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
-<?import java.lang.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.layout.BorderPane?>
 
-<Tab fx:controller="com.statsystem.controller.SampleTabController" text="Выборка № 1" fx:id="sampleTab" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<Tab fx:controller="com.statsystem.controller.SampleTabController" text="Выборка № 1" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
     <content>
         <TabPane fx:id="calcTabPane" prefHeight="371.0" prefWidth="600.0">
             <tabs>
-                <fx:include fx:id="interpolation" source="/fxml/interpolation_tab.fxml" />
                 <Tab closable="false" fx:id="newCalc">
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
